# policy-compass-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  think.md  todolist.md
.github/workflows/: cd.yml  ci.yml
app/: main.py  ui.py
app/api/routes/: chat.py  health.py  policies.py
app/core/: administrative_regions.py  config.py  dates.py  http.py  llm.py  observability.py  privacy.py  prompts.py  regions.py  relevance.py  session_control.py  xml_utils.py
app/graph/: contracts.py  edges.py  evidence.py  fallbacks.py  graph.py  nodes.py  profile_contracts.py  response_composer.py  scoring.py  search_contracts.py  state.py  validators.py
app/repositories/: chat_memory.py  feedback.py  policy.py  rag.py  supabase_fallback.py  work24_recruitment.py  work24_training.py  youthcenter.py
app/schemas/: chat.py  policy.py
app/static/: index.html
app/tools/: executor.py  schemas.py
data/: chat_memory_schema.sql  mock_policies.json  supabase_schema.sql
data/scripts/: ingest_data.py  ingest_rag.py  ingest_recruitment_infos.py  ingest_training_courses.py  ingest_youth_policies.py
docs/: API_AND_DEPLOYMENT_NOTES.md  API_TOOL_SCHEMA_DESIGN.md  CLAUDE_ARCHITECTURE_PEER_REVIEW.md  COLLABORATION.md  DAILY_LOG.md  DEVELOPMENT_HANDOFF.md  INTEGRATED_ARCHITECTURE_ISSUES.md  NEXT_ACTIONS.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SYSTEM_ARCHITECTURE_AUDIT_AND_REFACTOR_PLAN.md
docs/day4/: DEPLOYMENT_RUNBOOK.md  QA_AND_MENTORING.md  README.md
docs/day5/: LANGFUSE_CLASS_GUIDE.md  ROUTER_EVALUATION.md  TODO.md
docs/day5/evidence/: README.md  (+1 more)
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  data.ts  index.css  types.ts
frontend/src/lib/: api.ts  (+4 more)
reports/langfuse/: lf-eval-20260714-124718.json  lf-eval-20260714-124718.md
scripts/: run_langfuse_eval.py
tests/: conftest.py  test_agent.py  test_api.py  test_chat_memory.py  test_deployment.py  test_evidence.py  test_llm.py  test_multiturn_search_contracts.py  test_observability.py  test_phase1_source_routing_regressions.py  test_privacy.py  test_profile_contracts.py  test_regions.py  test_response_safety.py  test_search_contracts.py  test_session_control.py  test_source_selection.py  test_supabase_fallback.py  test_timeout_budget.py  test_work24_tools.py
(+4 files in other folders)
